Slight overflowing of the navbar outside of body element on mobile-phones view has been fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -24,7 +24,7 @@ body {
     background-size: cover;
 
     .navBar {
-      height: 100px;
+      height: 95px;
       width: 80%;
       min-width: max-content;
       background-color: white;
@@ -50,7 +50,7 @@ body {
         color: blue;
         font-size: 13px;
         cursor: pointer;
-        height: 100px;
+        height: 95px;
       }
       button:focus {
         outline: none;
@@ -252,8 +252,8 @@ body {
 @media all and (max-width: 700px) {
   body {
     header {
-      padding-left: 5%;
-      padding-right: 5%;
+      padding-left: 30px;
+      padding-right: 30px;
       .navBar {
         height: 70px;
         button {
@@ -276,12 +276,26 @@ body {
     }
   }
 }
+@media all and (max-width: 450px) {
+  body {
+    header {
+      .navBar {
+        width: 100px;
+      }
+    }
+  }
+}
 @media all and (min-width: 1000px) {
   body {
     header {
       .navBar {
         width: 70%;
+        height: 110px;
         padding-left: 30px;
+
+        button {
+          height: 110px;
+        }
       }
     }
     .content {
